Changes on the index page, added metatags for linkedln preview site

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:image" content="fully_qualified_image_url_here" />
+    <meta property='og:title' content='Leni Lunderman Portfolio'/>
+    <meta property='og:image' content='https://cdn.dribbble.com/users/5334371/screenshots/16953482/media/4507d68bf9d6bc82e0dee17b4bb3ac02.png'/>
+    <meta property='og:description' content='I build digital products, websites, and experiences'/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="../src/assets/amir.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
